--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.4.11"
+    "mongoose": "^5.4.11",
+    "validator": "^11.1.0"
   },
   "devDependencies": {
     "eslint": "^5.13.0",
